--- a/.github/node.yml
+++ b/.github/node.yml
@@ -12,10 +12,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
-      - name: Use Node.js ${{ matrix.node-version }}
+      - name: Use Node.js 19.5.0
         uses: actions/setup-node@v1
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 19.5.0
       - run: npm install
       - run: npm run lint
       - run: npm test
