--- a/.github/node.yml
+++ b/.github/node.yml
@@ -1,23 +1,23 @@
-name: Run Javascript Tests
+name: Node.js CI
 
 on: [push]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [18.x]
+        strategy:
+            matrix:
+                node-version: [18.x]
 
-    steps:
-      - uses: actions/checkout@v1
-      - name: Use Node.js 19.5.0
-        uses: actions/setup-node@v1
-        with:
-          node-version: 19.5.0
-      - run: npm install
-      - run: npm run lint
-      - run: npm test
-        env:
-          CI: true
+        steps:
+            - uses: actions/checkout@v1
+            - name: Use Node.js ${{ matrix.node-version }}
+              uses: actions/setup-node@v1
+              with:
+                  node-version: ${{ matrix.node-version }}
+            - run: npm install
+            - run: npm run lint
+            - run: npm test
+              env:
+                  CI: true
