--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-"devDependencies": {
-    "@babel/core": "^7.20.5",
-    "@babel/preset-env": "^7.20.2",
-    "babel-jest": "^29.3.1",
-    "eslint": "^8.29.0",
-    "eslint-plugin-react": "^7.31.11",
-    "jest": "^29.3.1",
-    "prettier": "^2.8.0",
-    "supertest": "^6.3.2",
-    "vite": "^3.2.4"
+"scripts": {
+    "lint": "prettier --check src/ && eslint src/",
+    "test": "jest",
+    "start": "node index.js",
+    "edit": "prettier --write src/"
 },
 "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "jest": "^29.3.1",
     "pg": "^8.8.0",
-    "sequelize": "^6.26.0",
-    "sequelize-cli": "^6.5.2",
-    "sqlite3": "^5.1.2"
+    "sequelize": "^6.27.0",
+    "sqlite3": "^5.1.4",
+    "supertest": "^6.3.3"
+},
+"devDependencies": {
+    "eslint": "^8.29.0",
+    "prettier": "^2.8.1"
 }
 }
